# xrwvm-fullstack_developer_capstone

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
database/: Dockerfile  app.js  models.js  package-lock.json  package.json  populate_mongodb.js  start_local.js
scripts/: browsershot.py  build_submission_pdf.py  capture_deployed_screenshots.py  (+1 more)
server/: Dockerfile  manage.py  pyproject.toml
server/djangoapp/: admin.py  frontend_urls.py  frontend_views.py  models.py  restapis.py  tests.py  urls.py  views.py
server/djangoapp/management/commands/: populate.py
server/djangoapp/microservices/: Dockerfile  app.py  requirements.txt
server/djangoapp/migrations/: 0001_initial.py
server/djangoapp/templates/djangoapp/: index.html
server/djangoproj/: asgi.py  settings.py  urls.py  wsgi.py
server/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.js
server/frontend/src/: App.jsx  api.js  index.css
server/frontend/src/components/Dealer/: Dealer.jsx
server/frontend/src/components/Dealers/: Dealers.jsx
server/frontend/src/components/Footer/: Footer.jsx
server/frontend/src/components/Header/: Header.jsx
server/frontend/src/components/Home/: Home.jsx
server/frontend/src/components/Login/: Login.jsx
server/frontend/src/components/PostReview/: PostReview.jsx
server/frontend/src/components/Register/: Register.jsx
server/frontend/static/: About.html  Contact.html  generate_images.py  site.css
server/frontend/static/static/css/: main.css
server/frontend/static/static/js/: main.js
(+14 files in other folders)
